fix(button-fab): removed min-width to fix icon position on iOS
fixes #461

--- a/ionic/components/button/button-fab.scss
+++ b/ionic/components/button/button-fab.scss
@@ -50,7 +50,6 @@ button,
     icon {
       flex: 1;
       font-size: 2.8rem;
-      min-width: 64px;
     }
 
   }
